deprecation updates